--- a/Compiladores/nbproject/project.properties
+++ b/Compiladores/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=aula01.Compiladores
+main.class=aula01.TestLexicalAnalyser
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
